# ceilopy

./: .gitignore  README.md  _version.py  pyproject.toml  setup.py
.github/workflows/: static.yml
ceilopy/: __init__.py  ceilolab.py  file_io.py
ceilopy/products/: __init__.py  cl51_cloud_prod_lev1_v1p3.py  production.py
docs/: cl51_cloud_prod_lev1_changlog.rst  conf.py  index.rst  installation.rst  product_cl51_cloud_prod_lev1.rst  products.rst
docs/_build/doctrees/: cl51_cloud_prod_lev1_changlog.doctree  environment.pickle  index.doctree  installation.doctree  product_cl51_cloud_prod_lev1.doctree  products.doctree
docs/_build/doctrees/notebooks/: cl51_cloud_prod_lev1_v1p3.doctree
docs/_build/html/: .buildinfo  cl51_cloud_prod_lev1_changlog.html  genindex.html  index.html  installation.html  objects.inv  product_cl51_cloud_prod_lev1.html  products.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: installation.rst.txt  product_cl51_cloud_prod_lev1.rst.txt  products.rst.txt
docs/_build/html/notebooks/: cl51_cloud_prod_lev1_v1p3.html  cl51_cloud_prod_lev1_v1p3.ipynb
docs/notebooks/: cl51_cloud_prod_lev1_v1p3.ipynb
notebooks/: getting_started.ipynb  raw_file_differences.ipynb  sandbox.ipynb  test.nc
scripts/: ceilometerproduction  cl51cloudprod  cl51cloudprod_sailsplash
